# SIRproject

./: CMakeCache.txt  CMakeLists.txt  CMakeListsok.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  SIRproject  SIRproject.cpp  cmake_install.cmake  compile_commands.json  main.cpp  sir  sirmodel.cfg
Progetto SIR/:  sirmodel.hpp  SIRproject.cpp  sirdata.cpp  sirdata.h  sirdata.hpp  sirmodel.cpp
Progetto SIR/include/:  sirmodel.hpp
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  doctest.h  sirmodel_test  sirmodel_test.cpp
include/:  sir_model.hpp  sirdata.hpp  sirmanage.hpp  sirmodel.hpp  sirmodelextended.hpp  sirprint.hpp
include/sfml/: area.h  axis.h  curve.h  grid.h  line.h  plot.h
src/: sir_model.cpp  sirdata.cpp  sirmanage.cpp  sirmodel.cpp  sirmodelextended.cpp  sirprint.cpp
src/sfml/: area.cpp  axis.cpp  curve.cpp  grid.cpp  line.cpp  plot.cpp
